--- a/m5/SConstruct
+++ b/m5/SConstruct
@@ -152,8 +152,8 @@ def rfind(l, elt, offs = -1):
 # returns -1, 0, 1 if v1 is <, ==, > v2
 def compare_versions(v1, v2):
     # Convert dotted strings to lists
-    v1 = map(int, v1.split('.'))
-    v2 = map(int, v2.split('.'))
+    v1 = v1.split('.')
+    v2 = v2.split('.')
     # Compare corresponding elements of lists
     for n1,n2 in zip(v1, v2):
         if n1 < n2: return -1
