--- a/m5/SConstruct
+++ b/m5/SConstruct
@@ -258,9 +258,9 @@ def PathListAllExist(key, val, env):
 
 global_sticky_opts_file = joinpath(build_root, 'options.global')
 
-global_sticky_opts = Options(global_sticky_opts_file, args=ARGUMENTS)
+global_sticky_opts = Variables(global_sticky_opts_file, args=ARGUMENTS)
 
-global_sticky_opts.AddOptions(
+global_sticky_opts.AddVariables(
     ('CC', 'C compiler', os.environ.get('CC', env['CC'])),
     ('CXX', 'C++ compiler', os.environ.get('CXX', env['CXX'])),
     ('EXTRAS', 'Add Extra directories to the compilation', '',
@@ -509,11 +509,11 @@ Export('all_cpu_list', 'default_cpus')
 # Sticky options get saved in the options file so they persist from
 # one invocation to the next (unless overridden, in which case the new
 # value becomes sticky).
-sticky_opts = Options(args=ARGUMENTS)
+sticky_opts = Variables(args=ARGUMENTS)
 Export('sticky_opts')
 
 # Non-sticky options only apply to the current build.
-nonsticky_opts = Options(args=ARGUMENTS)
+nonsticky_opts = Variables(args=ARGUMENTS)
 Export('nonsticky_opts')
 
 # Walk the tree and execute all SConsopts scripts that wil add to the
@@ -528,35 +528,35 @@ all_isa_list.sort()
 all_cpu_list.sort()
 default_cpus.sort()
 
-sticky_opts.AddOptions(
-    EnumOption('TARGET_ISA', 'Target ISA', 'alpha', all_isa_list),
-    BoolOption('FULL_SYSTEM', 'Full-system support', False),
+sticky_opts.AddVariables(
+    EnumVariable('TARGET_ISA', 'Target ISA', 'alpha', all_isa_list),
+    BoolVariable('FULL_SYSTEM', 'Full-system support', False),
     # There's a bug in scons 0.96.1 that causes ListOptions with list
     # values (more than one value) not to be able to be restored from
     # a saved option file.  If this causes trouble then upgrade to
     # scons 0.96.90 or later.
-    ListOption('CPU_MODELS', 'CPU models', default_cpus, all_cpu_list),
-    BoolOption('NO_FAST_ALLOC', 'Disable fast object allocator', False),
-    BoolOption('EFENCE', 'Link with Electric Fence malloc debugger',
-               False),
-    BoolOption('SS_COMPATIBLE_FP',
-               'Make floating-point results compatible with SimpleScalar',
-               False),
-    BoolOption('USE_SSE2',
-               'Compile for SSE2 (-msse2) to get IEEE FP on x86 hosts',
-               False),
-    BoolOption('USE_MYSQL', 'Use MySQL for stats output', have_mysql),
-    BoolOption('USE_FENV', 'Use <fenv.h> IEEE mode control', have_fenv),
-    BoolOption('USE_CHECKER', 'Use checker for detailed CPU models', False),
-    BoolOption('BATCH', 'Use batch pool for build and tests', False),
+    ListVariable('CPU_MODELS', 'CPU models', default_cpus, all_cpu_list),
+    BoolVariable('NO_FAST_ALLOC', 'Disable fast object allocator', False),
+    BoolVariable('EFENCE', 'Link with Electric Fence malloc debugger',
+                 False),
+    BoolVariable('SS_COMPATIBLE_FP',
+                 'Make floating-point results compatible with SimpleScalar',
+                 False),
+    BoolVariable('USE_SSE2',
+                 'Compile for SSE2 (-msse2) to get IEEE FP on x86 hosts',
+                 False),
+    BoolVariable('USE_MYSQL', 'Use MySQL for stats output', have_mysql),
+    BoolVariable('USE_FENV', 'Use <fenv.h> IEEE mode control', have_fenv),
+    BoolVariable('USE_CHECKER', 'Use checker for detailed CPU models', False),
+    BoolVariable('BATCH', 'Use batch pool for build and tests', False),
     ('BATCH_CMD', 'Batch pool submission command name', 'qdo'),
     ('PYTHONHOME',
      'Override the default PYTHONHOME for this system (use with caution)',
      '%s:%s' % (sys.prefix, sys.exec_prefix)),
     )
 
-nonsticky_opts.AddOptions(
-    BoolOption('update_ref', 'Update test reference outputs', False)
+nonsticky_opts.AddVariables(
+    BoolVariable('update_ref', 'Update test reference outputs', False)
     )
 
 # These options get exported to #defines in config/*.hh (see src/SConscript).
@@ -700,7 +700,7 @@ for build_path in build_paths:
     print "Building in", build_path
 
     # Make a copy of the build-root environment to use for this config.
-    env = base_env.Copy()
+    env = base_env.Clone()
     env['BUILDDIR'] = build_path
 
     # build_dir is the tail component of build path, and is used to
