--- a/m5-releases/20101029-f299139501f7-stable/SConstruct
+++ b/m5-releases/20101029-f299139501f7-stable/SConstruct
@@ -585,7 +585,9 @@ if not have_fenv:
 # Check for mysql.
 #
 mysql_config = WhereIs('mysql_config')
-have_mysql = bool(mysql_config)
+#have_mysql = bool(mysql_config)
+# Don't use MySQL
+have_mysql = False
 
 # Check MySQL version.
 if have_mysql:
