--- a/m5-releases/20130123-gem5-stable-f75ee4849c40/SConstruct
+++ b/m5-releases/20130123-gem5-stable-f75ee4849c40/SConstruct
@@ -458,6 +458,9 @@ class Transform(object):
 
 Export('Transform')
 
+# Maximum line length is sometimes exceeded for StaticLibrary builds
+main['ARCOM'] = '${TEMPFILE("%s")}' % main['ARCOM']
+
 # enable the regression script to use the termcap
 main['TERMCAP'] = termcap
 
